feat: very simple JAVA 6 code